--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@chainlink/ea-bootstrap": "^0.0.1",
     "@chainlink/external-adapter": "^0.2.3",
     "dotenv": "^8.2.0",
-    "js-conflux-sdk": "^1.0.0-alpha.4",
+    "js-conflux-sdk": "^0.13.6",
     "web3": "^1.2.9"
   },
   "devDependencies": {
